--- a/css/nouislider.css
+++ b/css/nouislider.css
@@ -1,8 +1,3 @@
-
-/* Functional styling;
- * These styles are required for noUiSlider to function.
- * You don't need to change these rules to apply your design.
- */
 .noUi-target,
 .noUi-target * {
 -webkit-touch-callout: none;
@@ -23,7 +18,7 @@
 	width: 100%;
 	height: 100%;
 	position: relative;
-	z-index: 1; /* Fix 401 */
+	z-index: 1;
 }
 .noUi-origin {
 	position: absolute;
